automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
 <a  href="about.html" target='_blank'>
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://civicsint-trn.rhythmlabs.infor.com/documents/1132145/2400193/Board-of-Trade-4.png/504fef38-ddb0-a641-a277-3fd5984f727a?t=1527549451057">
 </a>
 </p>
 </body>
